Fix animations and horizontal scroll bars-issue

--- a/assets/styles/general/basic-elements.scss
+++ b/assets/styles/general/basic-elements.scss
@@ -75,13 +75,3 @@ p a {
     border-bottom-width: 2px;
   }
 }
-
-.visually-hidden {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-}
